--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -3,3 +3,76 @@
   margin: 0;
   box-sizing: border-box;
 }
+body{
+  font-family: 'Press Start 2P';
+  position: relative;
+}
+
+main{
+  position: relative;
+  z-index: 1;
+  display: flex;
+  height: 100vh;
+}
+
+.bg-video-wrapper{
+  position: absolute;
+  z-index: -2;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+}
+
+.bg-video-wrapper .bg-video{
+  height: 100vh;
+}
+.bg-video-wrapper::after{
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: linear-gradient(90deg,
+   rgba(0,0,0,1) 0%, 
+   rgba(0,0,0,0.8) 50%, 
+   rgba(0,0,0,0.9) 100%);
+
+}
+
+.container__left{
+  width: 35%;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+
+
+.score_box{
+  background-color: #fff;
+  padding: 30px;
+}
+.frame{
+  border: 3px solid #000;
+  border-radius: 5px;
+}
+
+.card_details{
+  background-color: #fff;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  height: 6rem;
+}
+
+#card-name{
+  font-size: 0.8rem;
+}
+#card-type{
+  font-size: 1rem;
+}
