--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -14,8 +14,7 @@ main{
   display: flex;
   height: 100vh;
 }
-
-.bg-video-wrapper{
+.bg-video-container{
   position: absolute;
   z-index: -2;
   width: 100vw;
@@ -24,8 +23,7 @@ main{
   display: flex;
   justify-content: center;
 }
-
-.bg-video-wrapper .bg-video{
+#bg-video{
   height: 100vh;
 }
 .bg-video-wrapper::after{
@@ -42,32 +40,36 @@ main{
 
 }
 
-.container__left{
+/* ! container left */
+
+.container-left{
   width: 35%;
+  display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
 }
 
-
-.score_box{
+.score-box{
   background-color: #fff;
   padding: 30px;
+  display: flex;
+  flex-wrap: wrap;
 }
 .frame{
   border: 3px solid #000;
   border-radius: 5px;
 }
 
-.card_details{
+.card-details {
   background-color: #fff;
-  padding: 1rem;
+  padding: 1erm;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
-  width: 100%;
+  justify-content: space-around;
   height: 6rem;
+  width: 100%;
 }
 
 #card-name{
@@ -76,3 +78,50 @@ main{
 #card-type{
   font-size: 1rem;
 }
+
+
+/* ! container right */
+/* .container-right{
+  width: 65%;
+} */
+
+/* .card-infield img{
+  width: 125px;
+  height: 180px;
+  border: 2px solid #fff;
+} */
+
+
+/* .versus-img{
+  height: 100px;
+} */
+
+/* #player-field-card{
+  width: 125px;
+  height: 180px;
+} */
+
+/* .container-right{
+  width: 65%;
+  
+}
+
+.versus-img{
+  height: 100px;
+}
+
+.card-box-container{
+  width: 100%;
+  height: 100vh;
+} */
+
+/* 
+
+.card-box__container{
+  width: 100%;
+  height: 100vh; 
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 0.3rem;
+} */
