--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -6,6 +6,11 @@
 body{
   font-family: 'Press Start 2P';
   position: relative;
+
+  cursor: url("../assets/cursor/yugicursor.png"), default;
+}
+button, a,img,button:hover, a:hover,img:hover{
+  cursor: url('../assets/cursor/yamiyugicursorGLOW.png'), default;
 }
 
 main{
@@ -154,6 +159,7 @@ main{
 
 #next-duel{
   display: none;
+  text-transform: capitalize;
 }
 
 #next-duel.active{
