--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -21,19 +21,21 @@ main{
 }
 .bg-video-container{
   position: absolute;
+  right: 0;
+  bottom: 0;
   z-index: -2;
   width: 100vw;
   height: 100vh;
   overflow: hidden;
   display: flex;
   justify-content: center;
-
 }
+
 #bg-video{
   width: 100vw;
   height: 100vh;
 }
-.bg-video-wrapper::after{
+.bg-video-container::after{
   content: "";
   position: absolute;
   top: 0;
@@ -148,14 +150,6 @@ main{
   margin-top: 1rem;
 }
 
-
-
-
-
-/* #player-field-card{
-  width: 125px;
-  height: 180px;
-} */
 
 #next-duel{
   display: none;
